# MetagenomicsClient

curated-metagenomics-web-portal-and-api-client/: README.md  pyproject.toml
curated-metagenomics-web-portal-and-api-client/curated_metagenomics_web_portal_and_api_client/: __init__.py
curated-metagenomics-web-portal-and-api-client/curated_metagenomics_web_portal_and_api_client/api/default/: add_nextflow_event_nextflow_events_post.py  create_sample_metadata_samples_post.py  create_study_metadata_studies_post.py  delete_study_metadata_studies__uuid__delete.py  delete_study_metadata_studies_uuid_delete.py  files_change_files_changes_post.py  generate_download_signed_url_v4_files_signed_get.py  generate_download_signed_url_v_4_files_signed_get.py  get_nextflow_event_nextflow_events__id__get.py  get_nextflow_event_nextflow_events_id_get.py  get_samples_metadata_samples_get.py  get_studies_metadata_studies_get.py  get_uuid_from_string_metadata_uuid_get.py  list_file_events_files_changes_get.py  list_nextflow_events_nextflow_events_get.py  samples_for_study_metadata_studies__uuid__samples_get.py  samples_for_study_metadata_studies_uuid_samples_get.py  samples_json_metadata_samplesjson_get.py
curated-metagenomics-web-portal-and-api-client/curated_metagenomics_web_portal_and_api_client/models/: __init__.py  files_change_files_changes_post_event.py  nf_collection.py  nf_model.py  nf_model_metadata.py  nf_model_trace.py  nf_return.py  nf_return_metadata.py  nf_return_trace.py  sample.py  storage_event_collection.py  storage_event_return.py  study.py
(+1 files in other folders)
